# django_users_app

./: LICENSE  MANIFEST.in  README.md  setup.cfg
.ls/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
.ls/migrations/: 0001_initial.py
.ls/templates/registration/: confirm_template.html  login.html
.ls/templates/users/: register.html
django_users_app/: forms.py  tests.py  urls.py  views.py
django_users_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django_users_app/migrations/: 0001_initial.py
django_users_app/templates/: base.html
django_users_app/templates/django_users_app/: dashboard.html  profile.html  register.html
django_users_app/templates/registration/: login.html
users/: forms.py  models.py  tokens.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_profile_email_confirmed.py  0003_profile_personal_statement.py  0004_usermodel.py  0005_delete_usermodel.py
users/templates/registration/: password_reset_complete.html
users/templates/users/: dashboard.html
