[metadata]
name = django_users_app
version = 0.1
description = A Django app to integrate users.
long_description_content_type='text/markdown'
long_description = file: README.md
install_requires=['django-recaptcha','django-email-verification'],
url = https://github.com/millerthegorilla
author = James Miller
author_email = jamesstewartmiller@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
include_package_data = true
packages = find:
